--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Google Homepage</title>
+    <link rel="stylesheet" type="text/css" href="google-homepage-style.css">
 </head>
 
 <body>
@@ -15,5 +16,25 @@
                 <a class="squares" href="#"></a>
             </div>
         </div>
+    </div>
+    <div>
+        <img src="google2.0.0_0.jpg" alt="google logo">
+    </div>
+
+    <form>
+        <input type="text" name="search"> <br>
+        <input type="submit" value="Google Search">
+        <input type="submit" value="I'm Feeling Lucky">
+    </form>
+    <div>
+        <div>
+            <p>Germany</p>
+        </div>
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">How Search Works</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Settings</a>
     </div>
 </body>
