--- a/index.html
+++ b/index.html
@@ -1,40 +1,40 @@
 <!doctype html>
 
 <head>
+        <link rel="stylesheet" type="text/css" href="google-homepage-style.css">
     <title>Google Homepage</title>
-    <link rel="stylesheet" type="text/css" href="google-homepage-style.css">
 </head>
 
 <body>
     <div class="content">
         <div class="top">
-            <a href="#">About</a>
-            <a href="#">Store</a>
+            <a class="upper-left" href="#">About</a>
+            <a class="upper-left" href="#">Store</a>
             <div class="upper-right">
-                <a href="#">Gmail</a>
-                <a href="#">Images</a>
+                <a class="gmail" href="#">Gmail</a>
+                <a class="images" href="#">Images</a>
                 <a class="squares" href="#"></a>
             </div>
         </div>
-    </div>
-    <div>
-        <img src="google2.0.0_0.jpg" alt="google logo">
-    </div>
-
-    <form>
-        <input type="text" name="search"> <br>
-        <input type="submit" value="Google Search">
-        <input type="submit" value="I'm Feeling Lucky">
-    </form>
-    <div>
-        <div>
-            <p>Germany</p>
-        </div>
-        <a href="#">Advertising</a>
-        <a href="#">Business</a>
-        <a href="#">How Search Works</a>
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
+        <div class="logo">
+                <img class="google-logo" src="google2.0.0_0.jpg" alt="google logo">
+            </div>
+        
+            <form>
+                <input type="text" name="search"> <br>
+                <input type="submit" value="Google Search">
+                <input type="submit" value="I'm Feeling Lucky">
+            </form>
+            <div class="bottom">
+                <div class="upper-bottom">
+                    <p>Germany</p>
+                </div class="lower-bottom">
+                <a href="#">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">How Search Works</a>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Settings</a>
+            </div>
     </div>
 </body>
