complete search bar area and start on bottom

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         <div class="logo">
                 <img class="google-logo" src="google2.0.0_0.jpg" alt="google logo">
             </div>
-        
-            <form>
+            <div class="search-div">
+            <form class="search">
                 <input type="text" name="search"> <br>
                 <input type="submit" value="Google Search">
                 <input type="submit" value="I'm Feeling Lucky">
             </form>
+            </div>
             <div class="bottom">
                 <div class="upper-bottom">
                     <p>Germany</p>
