complete search buttons and continue on bottom portion

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <div class="search-div">
             <form class="search">
                 <input type="text" name="search"> <br>
-                <input type="submit" value="Google Search">
-                <input type="submit" value="I'm Feeling Lucky">
+                <div class="search-buttons">
+                <input class="button google-search" type="submit" value="Google Search">
+                <input class="button lucky" type="submit" value="I'm Feeling Lucky">
+                </div>
             </form>
             </div>
             <div class="bottom">
