work on bottom links and footer

--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
             <div class="bottom">
                 <div class="upper-bottom">
                     <p>Germany</p>
-                </div class="lower-bottom">
-                <a href="#">Advertising</a>
-                <a href="#">Business</a>
-                <a href="#">How Search Works</a>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Settings</a>
+                </div>
+                <div class="lower-bottom">
+                <span class="abh">
+                <a class="adv" href="#">Advertising</a>
+                <a class="bus" href="#">Business</a>
+                <a class="how" href="#">How Search Works</a>
+                </span>
+                <span class="pts">
+                <a class="pri" href="#">Privacy</a>
+                <a class="ter" href="#">Terms</a>
+                <a class="set" href="#">Settings</a>
+                </span>
+                </div>
             </div>
     </div>
 </body>
