complete footer/bottom area

--- a/index.html
+++ b/index.html
@@ -30,19 +30,20 @@
             </div>
             <div class="bottom">
                 <div class="upper-bottom">
-                    <p>Germany</p>
+                    <span class="germany">Germany</span>
                 </div>
                 <div class="lower-bottom">
-                <span class="abh">
-                <a class="adv" href="#">Advertising</a>
-                <a class="bus" href="#">Business</a>
-                <a class="how" href="#">How Search Works</a>
-                </span>
                 <span class="pts">
-                <a class="pri" href="#">Privacy</a>
-                <a class="ter" href="#">Terms</a>
-                <a class="set" href="#">Settings</a>
+                    <a class="pri" href="#">Privacy</a>
+                    <a class="ter" href="#">Terms</a>
+                    <a class="set" href="#">Settings</a>
                 </span>
+                <span class="abh">
+                    <a class="adv" href="#">Advertising</a>
+                    <a class="bus" href="#">Business</a>
+                    <a class="how" href="#">How Search Works</a>
+                </span>
+
                 </div>
             </div>
     </div>
