finish hover effect for all hyperlinks

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <div class="content">
         <div class="top">
-            <a class="upper-left" href="#">About</a>
-            <a class="upper-left" href="#">Store</a>
+            <a class="link upper-left" href="#">About</a>
+            <a class="link upper-left" href="#">Store</a>
             <div class="upper-right">
-                <a class="gmail" href="#">Gmail</a>
-                <a class="images" href="#">Images</a>
+                <a class="link gmail" href="#">Gmail</a>
+                <a class="link images" href="#">Images</a>
                 <a class="squares" href="#"></a>
             </div>
         </div>
@@ -34,14 +34,14 @@
                 </div>
                 <div class="lower-bottom">
                 <span class="pts">
-                    <a class="pri" href="#">Privacy</a>
-                    <a class="ter" href="#">Terms</a>
-                    <a class="set" href="#">Settings</a>
+                    <a class="link pri" href="#">Privacy</a>
+                    <a class="link ter" href="#">Terms</a>
+                    <a class="link set" href="#">Settings</a>
                 </span>
                 <span class="abh">
-                    <a class="adv" href="#">Advertising</a>
-                    <a class="bus" href="#">Business</a>
-                    <a class="how" href="#">How Search Works</a>
+                    <a class="link adv" href="#">Advertising</a>
+                    <a class="link bus" href="#">Business</a>
+                    <a class="link how" href="#">How Search Works</a>
                 </span>
 
                 </div>
