final CSS to search bar hover

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="search-div">
             <form class="search">
-                <input type="text" name="search"> <br>
+                <input class="search-input" type="text" name="search"> <br>
                 <div class="search-buttons">
                 <input class="button google-search" type="submit" value="Google Search">
                 <input class="button lucky" type="submit" value="I'm Feeling Lucky">
